<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="30dip"
        android:background="#ffEEEEEE"
        android:orientation="vertical">

        <EditText 
		    android:id="@+id/et_pkg_name"
		    android:layout_width="200dip"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dip"
		    android:text="@string/pkg_name"
		    android:hint="@string/input_pkg_name"
		    />

		<TextView 
		    android:id="@+id/tv_exist"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dip"
		    />

		<Button 
		    android:id="@+id/btn_query_app_info"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dip"
		    android:text="@string/query_app_info"
		    />

		<Button 
		    android:id="@+id/btn_delete_pkg"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dip"
		    android:text="@string/delete_pkg"
		    />

		<Button 
		    android:id="@+id/btn_su_rm"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="10dip"
		    android:text="@string/su_rm"
		    />

	</LinearLayout>
	
</RelativeLayout>
